feat(auth): actualizar backend para guardar contraseñas. Implementar encriptación y guardado seguro de contraseñas